scanner.output
Terminales no usados en la gramática

    TO
    DOWNTO
    ENDL
    READ
    READLN
    BEG
    END
    THEN
    VAR
    LISTCONTENT
    VALUE
    STRINGQUOTE
    AMPERSAND


Gramática

    0 $accept: S $end

    1 S: cabecera preprograma

    2 comment: COMMENTLINE
    3        | MULTILINE

    4 cabecera: PROGRAM LOWER STRINGV HIGHER
    5         | PROGRAM LOWER STRINGV DOT STRINGV HIGHER
    6         | PROGRAM QUOTESTRING
    7         | PROGRAM LOWER STRINGV HIGHER cabecera
    8         | PROGRAM LOWER STRINGV DOT STRINGV HIGHER cabecera
    9         | PROGRAM QUOTESTRING cabecera

   10 constdef: DEFINE STRINGV values
   11         | CONST types STRINGV EQ values SEMICOLON

   12 vardef: types STRINGV SEMICOLON
   13       | types STRINGV LSQUAREPAREN atom RSQUAREPAREN SEMICOLON
   14       | types STRINGV EQ exp SEMICOLON
   15       | types STRINGV LSQUAREPAREN atom RSQUAREPAREN EQ OPENCURLYBRACKET array CLOSECURLYBRACKET SEMICOLON
   16       | types STRINGV LSQUAREPAREN RSQUAREPAREN EQ exp SEMICOLON
   17       | types STRINGV COMMA vardef
   18       | types STRINGV EQ exp COMMA vardef
   19       | STRINGV operand vardef
   20       | STRINGV COMMA vardef
   21       | atom SEMICOLON
   22       | atom EQ exp SEMICOLON

   23 types: type
   24      | type prod

   25 type: INTEGER
   26     | SHORT
   27     | LONG
   28     | LONG_LONG
   29     | UNSIGNED_INT
   30     | UNSIGNED_SHORT
   31     | UNSIGNED_LONG
   32     | UNSIGNED_LONG_LONG
   33     | FLOAT
   34     | DOUBLE
   35     | STRING
   36     | CHAR
   37     | BOOLEAN
   38     | VOID
   39     | STRUCT STRINGV

   40 values: TRUEVAL
   41       | FALSEVAL
   42       | INTNUM
   43       | REALNUM
   44       | QUOTESTRING

   45 preprograma: preprograma programa
   46            | programa

   47 programa: types STRINGV LPAREN args RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   48         | types STRINGV LPAREN RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   49         | types STRINGV LPAREN RPAREN SEMICOLON
   50         | vardef programa
   51         | types OPENCURLYBRACKET lines_program CLOSECURLYBRACKET SEMICOLON
   52         | constdef programa
   53         | comment

   54 prod: PROD prod
   55     | PROD

   56 args: types STRINGV COMMA args
   57     | types STRINGV
   58     | types STRINGV LSQUAREPAREN RSQUAREPAREN COMMA args
   59     | types STRINGV LSQUAREPAREN RSQUAREPAREN

   60 lines_program: lines_program line_program
   61              | line_program

   62 if_statement: IF LPAREN exp RPAREN line_program
   63             | IF LPAREN exp RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   64             | ELSE IF LPAREN exp RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   65             | ELSE OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   66             | SWITCH exp OPENCURLYBRACKET case_chain CLOSECURLYBRACKET

   67 case_chain: CASE values COLON lines_program case_chain
   68           | CASE values COLON lines_program
   69           | CASE STRINGV COLON lines_program case_chain
   70           | CASE STRINGV COLON lines_program
   71           | DEFAULT COLON lines_program

   72 fun_cre: STRINGV LPAREN array RPAREN
   73        | STRINGV LPAREN RPAREN
   74        | LPAREN types RPAREN fun_cre

   75 line_program: WRITE LOWER LOWER precontentWrite SEMICOLON
   76             | PRINTF LPAREN precontentWrite RPAREN SEMICOLON
   77             | SCANF LPAREN precontentWrite RPAREN SEMICOLON
   78             | fun_cre
   79             | if_statement
   80             | FOR LPAREN types STRINGV EQ INTNUM SEMICOLON exp SEMICOLON STRINGV operand RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   81             | FOR LPAREN types STRINGV EQ INTNUM SEMICOLON exp SEMICOLON vardef RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   82             | DO OPENCURLYBRACKET lines_program CLOSECURLYBRACKET WHILE LPAREN exp RPAREN SEMICOLON
   83             | WHILE LPAREN exp RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   84             | comment
   85             | STRINGV operand SEMICOLON
   86             | LPAREN prod STRINGV RPAREN operand SEMICOLON
   87             | RETURN exp SEMICOLON
   88             | RETURN SEMICOLON
   89             | vardef
   90             | types OPENCURLYBRACKET lines_program CLOSECURLYBRACKET SEMICOLON

   91 array: exp COMMA array
   92      | exp
   93      | types

   94 precontentWrite: contentWrite

   95 contentWrite: contentWrite COMMA exp
   96             | QUOTESTRING
   97             | STRINGV

   98 exp: exp operand term
   99    | term

  100 term: atom
  101     | LPAREN exp RPAREN
  102     | EX exp

  103 operand: PLUS
  104        | PLUS EQ
  105        | HYPHEN
  106        | HYPHEN EQ
  107        | HYPHEN HIGHER
  108        | PROD
  109        | DIV
  110        | DIVINT
  111        | MOD
  112        | LOWER
  113        | HIGHER
  114        | LOWER EQ
  115        | HIGHER EQ
  116        | EQ EQ
  117        | AND
  118        | PLUS PLUS
  119        | OR
  120        | DOT
  121        | PERCENT
  122        | EX EQ

  123 atom: STRINGV
  124     | prod STRINGV
  125     | values
  126     | STRINGV LSQUAREPAREN exp RSQUAREPAREN
  127     | fun_cre


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    WHILE (258) 82 83
    FOR (259) 80 81
    DO (260) 82
    TO (261)
    DOWNTO (262)
    WRITE (263) 75
    ENDL (264)
    READ (265)
    READLN (266)
    PROGRAM (267) 4 5 6 7 8 9
    BEG (268)
    END (269)
    IF (270) 62 63 64
    THEN (271)
    ELSE (272) 64 65
    SWITCH (273) 66
    CASE (274) 67 68 69 70
    DEFAULT (275) 71
    AND (276) 117
    OR (277) 119
    LOWER (278) 4 5 7 8 75 112 114
    HIGHER (279) 4 5 7 8 107 113 115
    PLUS <valString> (280) 103 104 118
    HYPHEN <valString> (281) 105 106 107
    PROD (282) 54 55 108
    DIV (283) 109
    DIVINT (284) 110
    MOD (285) 111
    COMMA (286) 17 18 20 56 58 91 95
    DOT (287) 5 8 120
    PERCENT <valString> (288) 121
    EQ <valString> (289) 11 14 15 16 18 22 80 81 104 106 114 115 116 122
    COMMENTLINE <valString> (290) 2
    MULTILINE <valString> (291) 3
    VAR (292)
    CONST (293) 11
    DEFINE (294) 10
    LISTCONTENT (295)
    VALUE (296)
    LPAREN (297) 47 48 49 62 63 64 72 73 74 76 77 80 81 82 83 86 101
    STRINGQUOTE (298)
    RPAREN (299) 47 48 49 62 63 64 72 73 74 76 77 80 81 82 83 86 101
    RSQUAREPAREN (300) 13 15 16 58 59 126
    LSQUAREPAREN (301) 13 15 16 58 59 126
    COLON (302) 67 68 69 70 71
    SEMICOLON <valString> (303) 11 12 13 14 15 16 21 22 49 51 75 76 77 80 81 82 85 86 87 88 90
    INTEGER (304) 25
    SHORT (305) 26
    LONG (306) 27
    LONG_LONG (307) 28
    UNSIGNED_INT (308) 29
    UNSIGNED_SHORT (309) 30
    UNSIGNED_LONG (310) 31
    UNSIGNED_LONG_LONG (311) 32
    FLOAT (312) 33
    DOUBLE (313) 34
    VOID (314) 38
    OPENCURLYBRACKET (315) 15 47 48 51 63 64 65 66 80 81 82 83 90
    CLOSECURLYBRACKET (316) 15 47 48 51 63 64 65 66 80 81 82 83 90
    BOOLEAN (317) 37
    CHAR (318) 36
    PRINTF (319) 76
    SCANF (320) 77
    STRING <valString> (321) 35
    STRINGV <valString> (322) 4 5 7 8 10 11 12 13 14 15 16 17 18 19 20 39 47 48 49 56 57 58 59 69 70 72 73 80 81 85 86 97 123 124 126
    QUOTESTRING <valString> (323) 6 9 44 96
    TRUEVAL <valString> (324) 40
    FALSEVAL <valString> (325) 41
    INTNUM <valString> (326) 42 80 81
    REALNUM <valString> (327) 43
    RETURN (328) 87 88
    STRUCT (329) 39
    AMPERSAND (330)
    EX (331) 102 122


No terminales con las reglas donde aparecen

    $accept (77)
        on left: 0
    S (78)
        on left: 1
        on right: 0
    comment <valString> (79)
        on left: 2 3
        on right: 53 84
    cabecera <valString> (80)
        on left: 4 5 6 7 8 9
        on right: 1 7 8 9
    constdef <valString> (81)
        on left: 10 11
        on right: 52
    vardef <valString> (82)
        on left: 12 13 14 15 16 17 18 19 20 21 22
        on right: 17 18 19 20 50 81 89
    types <valInt> (83)
        on left: 23 24
        on right: 11 12 13 14 15 16 17 18 47 48 49 51 56 57 58 59 74 80 81 90 93
    type <valInt> (84)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 23 24
    values <valString> (85)
        on left: 40 41 42 43 44
        on right: 10 11 67 68 125
    preprograma <valString> (86)
        on left: 45 46
        on right: 1 45
    programa <valString> (87)
        on left: 47 48 49 50 51 52 53
        on right: 45 46 50 52
    prod <valString> (88)
        on left: 54 55
        on right: 24 54 86 124
    args <valString> (89)
        on left: 56 57 58 59
        on right: 47 56 58
    lines_program <valString> (90)
        on left: 60 61
        on right: 47 48 51 60 63 64 65 67 68 69 70 71 80 81 82 83 90
    if_statement <valString> (91)
        on left: 62 63 64 65 66
        on right: 79
    case_chain <valString> (92)
        on left: 67 68 69 70 71
        on right: 66 67 69
    fun_cre <valString> (93)
        on left: 72 73 74
        on right: 74 78 127
    line_program <valString> (94)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90
        on right: 60 61 62
    array <valString> (95)
        on left: 91 92 93
        on right: 15 72 91
    precontentWrite <valString> (96)
        on left: 94
        on right: 75 76 77
    contentWrite <valString> (97)
        on left: 95 96 97
        on right: 94 95
    exp <valString> (98)
        on left: 98 99
        on right: 14 16 18 22 62 63 64 66 80 81 82 83 87 91 92 95 98 101 102 126
    term <valString> (99)
        on left: 100 101 102
        on right: 98 99
    operand <valString> (100)
        on left: 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122
        on right: 19 80 85 86 98
    atom <valString> (101)
        on left: 123 124 125 126 127
        on right: 13 15 21 22 100


Estado 0

    0 $accept: • S $end

    PROGRAM  desplazar e ir al estado 1

    S         ir al estado 2
    cabecera  ir al estado 3


Estado 1

    4 cabecera: PROGRAM • LOWER STRINGV HIGHER
    5         | PROGRAM • LOWER STRINGV DOT STRINGV HIGHER
    6         | PROGRAM • QUOTESTRING
    7         | PROGRAM • LOWER STRINGV HIGHER cabecera
    8         | PROGRAM • LOWER STRINGV DOT STRINGV HIGHER cabecera
    9         | PROGRAM • QUOTESTRING cabecera

    LOWER        desplazar e ir al estado 4
    QUOTESTRING  desplazar e ir al estado 5


Estado 2

    0 $accept: S • $end

    $end  desplazar e ir al estado 6


Estado 3

    1 S: cabecera • preprograma

    PROD                desplazar e ir al estado 7
    COMMENTLINE         desplazar e ir al estado 8
    MULTILINE           desplazar e ir al estado 9
    CONST               desplazar e ir al estado 10
    DEFINE              desplazar e ir al estado 11
    LPAREN              desplazar e ir al estado 12
    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRINGV             desplazar e ir al estado 27
    QUOTESTRING         desplazar e ir al estado 28
    TRUEVAL             desplazar e ir al estado 29
    FALSEVAL            desplazar e ir al estado 30
    INTNUM              desplazar e ir al estado 31
    REALNUM             desplazar e ir al estado 32
    STRUCT              desplazar e ir al estado 33

    comment      ir al estado 34
    constdef     ir al estado 35
    vardef       ir al estado 36
    types        ir al estado 37
    type         ir al estado 38
    values       ir al estado 39
    preprograma  ir al estado 40
    programa     ir al estado 41
    prod         ir al estado 42
    fun_cre      ir al estado 43
    atom         ir al estado 44


Estado 4

    4 cabecera: PROGRAM LOWER • STRINGV HIGHER
    5         | PROGRAM LOWER • STRINGV DOT STRINGV HIGHER
    7         | PROGRAM LOWER • STRINGV HIGHER cabecera
    8         | PROGRAM LOWER • STRINGV DOT STRINGV HIGHER cabecera

    STRINGV  desplazar e ir al estado 45


Estado 5

    6 cabecera: PROGRAM QUOTESTRING •
    9         | PROGRAM QUOTESTRING • cabecera

    PROGRAM  desplazar e ir al estado 1

    $default  reduce usando la regla 6 (cabecera)

    cabecera  ir al estado 46


Estado 6

    0 $accept: S $end •

    $default  aceptar


Estado 7

   54 prod: PROD • prod
   55     | PROD •

    PROD  desplazar e ir al estado 7

    $default  reduce usando la regla 55 (prod)

    prod  ir al estado 47


Estado 8

    2 comment: COMMENTLINE •

    $default  reduce usando la regla 2 (comment)


Estado 9

    3 comment: MULTILINE •

    $default  reduce usando la regla 3 (comment)


Estado 10

   11 constdef: CONST • types STRINGV EQ values SEMICOLON

    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRUCT              desplazar e ir al estado 33

    types  ir al estado 48
    type   ir al estado 38


Estado 11

   10 constdef: DEFINE • STRINGV values

    STRINGV  desplazar e ir al estado 49


Estado 12

   74 fun_cre: LPAREN • types RPAREN fun_cre

    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRUCT              desplazar e ir al estado 33

    types  ir al estado 50
    type   ir al estado 38


Estado 13

   25 type: INTEGER •

    $default  reduce usando la regla 25 (type)


Estado 14

   26 type: SHORT •

    $default  reduce usando la regla 26 (type)


Estado 15

   27 type: LONG •

    $default  reduce usando la regla 27 (type)


Estado 16

   28 type: LONG_LONG •

    $default  reduce usando la regla 28 (type)


Estado 17

   29 type: UNSIGNED_INT •

    $default  reduce usando la regla 29 (type)


Estado 18

   30 type: UNSIGNED_SHORT •

    $default  reduce usando la regla 30 (type)


Estado 19

   31 type: UNSIGNED_LONG •

    $default  reduce usando la regla 31 (type)


Estado 20

   32 type: UNSIGNED_LONG_LONG •

    $default  reduce usando la regla 32 (type)


Estado 21

   33 type: FLOAT •

    $default  reduce usando la regla 33 (type)


Estado 22

   34 type: DOUBLE •

    $default  reduce usando la regla 34 (type)


Estado 23

   38 type: VOID •

    $default  reduce usando la regla 38 (type)


Estado 24

   37 type: BOOLEAN •

    $default  reduce usando la regla 37 (type)


Estado 25

   36 type: CHAR •

    $default  reduce usando la regla 36 (type)


Estado 26

   35 type: STRING •

    $default  reduce usando la regla 35 (type)


Estado 27

   19 vardef: STRINGV • operand vardef
   20       | STRINGV • COMMA vardef
   72 fun_cre: STRINGV • LPAREN array RPAREN
   73        | STRINGV • LPAREN RPAREN
  123 atom: STRINGV •
  126     | STRINGV • LSQUAREPAREN exp RSQUAREPAREN

    AND           desplazar e ir al estado 51
    OR            desplazar e ir al estado 52
    LOWER         desplazar e ir al estado 53
    HIGHER        desplazar e ir al estado 54
    PLUS          desplazar e ir al estado 55
    HYPHEN        desplazar e ir al estado 56
    PROD          desplazar e ir al estado 57
    DIV           desplazar e ir al estado 58
    DIVINT        desplazar e ir al estado 59
    MOD           desplazar e ir al estado 60
    COMMA         desplazar e ir al estado 61
    DOT           desplazar e ir al estado 62
    PERCENT       desplazar e ir al estado 63
    LPAREN        desplazar e ir al estado 65
    LSQUAREPAREN  desplazar e ir al estado 66
    EX            desplazar e ir al estado 67

    $default  reduce usando la regla 123 (atom)

    operand  ir al estado 68


Estado 28

   44 values: QUOTESTRING •

    $default  reduce usando la regla 44 (values)


Estado 29

   40 values: TRUEVAL •

    $default  reduce usando la regla 40 (values)


Estado 30

   41 values: FALSEVAL •

    $default  reduce usando la regla 41 (values)


Estado 31

   42 values: INTNUM •

    $default  reduce usando la regla 42 (values)


Estado 32

   43 values: REALNUM •

    $default  reduce usando la regla 43 (values)


Estado 33

   39 type: STRUCT • STRINGV

    STRINGV  desplazar e ir al estado 69


Estado 34

   53 programa: comment •

    $default  reduce usando la regla 53 (programa)


Estado 35

   52 programa: constdef • programa

    PROD                desplazar e ir al estado 7
    COMMENTLINE         desplazar e ir al estado 8
    MULTILINE           desplazar e ir al estado 9
    CONST               desplazar e ir al estado 10
    DEFINE              desplazar e ir al estado 11
    LPAREN              desplazar e ir al estado 12
    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRINGV             desplazar e ir al estado 27
    QUOTESTRING         desplazar e ir al estado 28
    TRUEVAL             desplazar e ir al estado 29
    FALSEVAL            desplazar e ir al estado 30
    INTNUM              desplazar e ir al estado 31
    REALNUM             desplazar e ir al estado 32
    STRUCT              desplazar e ir al estado 33

    comment   ir al estado 34
    constdef  ir al estado 35
    vardef    ir al estado 36
    types     ir al estado 37
    type      ir al estado 38
    values    ir al estado 39
    programa  ir al estado 70
    prod      ir al estado 42
    fun_cre   ir al estado 43
    atom      ir al estado 44


Estado 36

   50 programa: vardef • programa

    PROD                desplazar e ir al estado 7
    COMMENTLINE         desplazar e ir al estado 8
    MULTILINE           desplazar e ir al estado 9
    CONST               desplazar e ir al estado 10
    DEFINE              desplazar e ir al estado 11
    LPAREN              desplazar e ir al estado 12
    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRINGV             desplazar e ir al estado 27
    QUOTESTRING         desplazar e ir al estado 28
    TRUEVAL             desplazar e ir al estado 29
    FALSEVAL            desplazar e ir al estado 30
    INTNUM              desplazar e ir al estado 31
    REALNUM             desplazar e ir al estado 32
    STRUCT              desplazar e ir al estado 33

    comment   ir al estado 34
    constdef  ir al estado 35
    vardef    ir al estado 36
    types     ir al estado 37
    type      ir al estado 38
    values    ir al estado 39
    programa  ir al estado 71
    prod      ir al estado 42
    fun_cre   ir al estado 43
    atom      ir al estado 44


Estado 37

   12 vardef: types • STRINGV SEMICOLON
   13       | types • STRINGV LSQUAREPAREN atom RSQUAREPAREN SEMICOLON
   14       | types • STRINGV EQ exp SEMICOLON
   15       | types • STRINGV LSQUAREPAREN atom RSQUAREPAREN EQ OPENCURLYBRACKET array CLOSECURLYBRACKET SEMICOLON
   16       | types • STRINGV LSQUAREPAREN RSQUAREPAREN EQ exp SEMICOLON
   17       | types • STRINGV COMMA vardef
   18       | types • STRINGV EQ exp COMMA vardef
   47 programa: types • STRINGV LPAREN args RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   48         | types • STRINGV LPAREN RPAREN OPENCURLYBRACKET lines_program CLOSECURLYBRACKET
   49         | types • STRINGV LPAREN RPAREN SEMICOLON
   51         | types • OPENCURLYBRACKET lines_program CLOSECURLYBRACKET SEMICOLON

    OPENCURLYBRACKET  desplazar e ir al estado 72
    STRINGV           desplazar e ir al estado 73


Estado 38

   23 types: type •
   24      | type • prod

    PROD  desplazar e ir al estado 7

    $default  reduce usando la regla 23 (types)

    prod  ir al estado 74


Estado 39

  125 atom: values •

    $default  reduce usando la regla 125 (atom)


Estado 40

    1 S: cabecera preprograma •
   45 preprograma: preprograma • programa

    PROD                desplazar e ir al estado 7
    COMMENTLINE         desplazar e ir al estado 8
    MULTILINE           desplazar e ir al estado 9
    CONST               desplazar e ir al estado 10
    DEFINE              desplazar e ir al estado 11
    LPAREN              desplazar e ir al estado 12
    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRINGV             desplazar e ir al estado 27
    QUOTESTRING         desplazar e ir al estado 28
    TRUEVAL             desplazar e ir al estado 29
    FALSEVAL            desplazar e ir al estado 30
    INTNUM              desplazar e ir al estado 31
    REALNUM             desplazar e ir al estado 32
    STRUCT              desplazar e ir al estado 33

    $default  reduce usando la regla 1 (S)

    comment   ir al estado 34
    constdef  ir al estado 35
    vardef    ir al estado 36
    types     ir al estado 37
    type      ir al estado 38
    values    ir al estado 39
    programa  ir al estado 75
    prod      ir al estado 42
    fun_cre   ir al estado 43
    atom      ir al estado 44


Estado 41

   46 preprograma: programa •

    $default  reduce usando la regla 46 (preprograma)


Estado 42

  124 atom: prod • STRINGV

    STRINGV  desplazar e ir al estado 76


Estado 43

  127 atom: fun_cre •

    $default  reduce usando la regla 127 (atom)


Estado 44

   21 vardef: atom • SEMICOLON
   22       | atom • EQ exp SEMICOLON

    EQ         desplazar e ir al estado 77
    SEMICOLON  desplazar e ir al estado 78


Estado 45

    4 cabecera: PROGRAM LOWER STRINGV • HIGHER
    5         | PROGRAM LOWER STRINGV • DOT STRINGV HIGHER
    7         | PROGRAM LOWER STRINGV • HIGHER cabecera
    8         | PROGRAM LOWER STRINGV • DOT STRINGV HIGHER cabecera

    HIGHER  desplazar e ir al estado 79
    DOT     desplazar e ir al estado 80


Estado 46

    9 cabecera: PROGRAM QUOTESTRING cabecera •

    $default  reduce usando la regla 9 (cabecera)


Estado 47

   54 prod: PROD prod •

    $default  reduce usando la regla 54 (prod)


Estado 48

   11 constdef: CONST types • STRINGV EQ values SEMICOLON

    STRINGV  desplazar e ir al estado 81


Estado 49

   10 constdef: DEFINE STRINGV • values

    QUOTESTRING  desplazar e ir al estado 28
    TRUEVAL      desplazar e ir al estado 29
    FALSEVAL     desplazar e ir al estado 30
    INTNUM       desplazar e ir al estado 31
    REALNUM      desplazar e ir al estado 32

    values  ir al estado 82


Estado 50

   74 fun_cre: LPAREN types • RPAREN fun_cre

    RPAREN  desplazar e ir al estado 83


Estado 51

  117 operand: AND •

    $default  reduce usando la regla 117 (operand)


Estado 52

  119 operand: OR •

    $default  reduce usando la regla 119 (operand)


Estado 53

  112 operand: LOWER •
  114        | LOWER • EQ

    EQ  desplazar e ir al estado 84

    $default  reduce usando la regla 112 (operand)


Estado 54

  113 operand: HIGHER •
  115        | HIGHER • EQ

    EQ  desplazar e ir al estado 85

    $default  reduce usando la regla 113 (operand)


Estado 55

  103 operand: PLUS •
  104        | PLUS • EQ
  118        | PLUS • PLUS

    PLUS  desplazar e ir al estado 86
    EQ    desplazar e ir al estado 87

    $default  reduce usando la regla 103 (operand)


Estado 56

  105 operand: HYPHEN •
  106        | HYPHEN • EQ
  107        | HYPHEN • HIGHER

    HIGHER  desplazar e ir al estado 88
    EQ      desplazar e ir al estado 89

    $default  reduce usando la regla 105 (operand)


Estado 57

  108 operand: PROD •

    $default  reduce usando la regla 108 (operand)


Estado 58

  109 operand: DIV •

    $default  reduce usando la regla 109 (operand)


Estado 59

  110 operand: DIVINT •

    $default  reduce usando la regla 110 (operand)


Estado 60

  111 operand: MOD •

    $default  reduce usando la regla 111 (operand)


Estado 61

   20 vardef: STRINGV COMMA • vardef

    PROD                desplazar e ir al estado 7
    LPAREN              desplazar e ir al estado 12
    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRINGV             desplazar e ir al estado 27
    QUOTESTRING         desplazar e ir al estado 28
    TRUEVAL             desplazar e ir al estado 29
    FALSEVAL            desplazar e ir al estado 30
    INTNUM              desplazar e ir al estado 31
    REALNUM             desplazar e ir al estado 32
    STRUCT              desplazar e ir al estado 33

    vardef   ir al estado 90
    types    ir al estado 91
    type     ir al estado 38
    values   ir al estado 39
    prod     ir al estado 42
    fun_cre  ir al estado 43
    atom     ir al estado 44


Estado 62

  120 operand: DOT •

    $default  reduce usando la regla 120 (operand)


Estado 63

  121 operand: PERCENT •

    $default  reduce usando la regla 121 (operand)


Estado 64

  116 operand: EQ • EQ

    EQ  desplazar e ir al estado 92


Estado 65

   72 fun_cre: STRINGV LPAREN • array RPAREN
   73        | STRINGV LPAREN • RPAREN

    PROD                desplazar e ir al estado 7
    LPAREN              desplazar e ir al estado 93
    RPAREN              desplazar e ir al estado 94
    INTEGER             desplazar e ir al estado 13
    SHORT               desplazar e ir al estado 14
    LONG                desplazar e ir al estado 15
    LONG_LONG           desplazar e ir al estado 16
    UNSIGNED_INT        desplazar e ir al estado 17
    UNSIGNED_SHORT      desplazar e ir al estado 18
    UNSIGNED_LONG       desplazar e ir al estado 19
    UNSIGNED_LONG_LONG  desplazar e ir al estado 20
    FLOAT               desplazar e ir al estado 21
    DOUBLE              desplazar e ir al estado 22
    VOID                desplazar e ir al estado 23
    BOOLEAN             desplazar e ir al estado 24
    CHAR                desplazar e ir al estado 25
    STRING              desplazar e ir al estado 26
    STRINGV             desplazar e ir al estado 95
    QUOTESTRING         desplazar e ir al estado 28
    TRUEVAL             desplazar e ir al estado 29
    FALSEVAL            desplazar e ir al estado 30
    INTNUM              desplazar e ir al estado 31
    REALNUM             desplazar e ir al estado 32
    STRUCT              desplazar e ir al estado 33
    EX                  desplazar e ir al estado 96

    types    ir al estado 97
    type     ir al estado 38
    values   ir al estado 39
    prod     ir al estado 42
    fun_cre  ir al estado 43
    array    ir al estado 98
    exp      ir al estado 99
    term     ir al estado 100
    atom     ir al estado 101


Estado 66

  126 atom: STRINGV LSQUAREPAREN • exp RSQUAREPAREN

    PROD         desplazar e ir al estado 7
    LPAREN       desplazar e ir al estado 93
    STRINGV      desplazar e ir al estado 95
    QUOTESTRING  desplazar e ir al estado 28
    TRUEVAL      desplazar e ir al estado 29
    FALSEVAL     desplazar e ir al estado 30
    INTNUM       desplazar e ir al estado 31
    REALNUM      desplazar e ir al estado 32
    EX           desplazar e ir al estado 96

    values   ir al estado 39
    prod     ir al estado 42
    fun_cre  ir al estado 43
    exp      ir al estado 102
    term     ir al estado 100
    atom     ir al estado 101


Estado 67

  122 operand: EX • EQ

    EQ  desplazar e ir al estado 103


Estado 68

   19 vardef: STRINGV operand • vardef
